--- a/NotificationSystem/appsettings.json
+++ b/NotificationSystem/appsettings.json
@@ -1,20 +1,10 @@
 {
-    //"EmailSettings": {
-    //    "DisplayName": "System Mail",
-    //    "From": "your_email@gmail.com",
-    //    "Host": "smtp.gmail.com",
-    //    "Port": 587,
-    //    "Username": "your_email@gmail.com",
-    //    "Password": "app_password"
-    //}
-
     "EmailSettings": {
-        "DisplayName": "Notification",
-        "From": "usmaneijaz@gmail.com",
+        "DisplayName": "System Mail",
+        "From": "your_email@gmail.com",
         "Host": "smtp.gmail.com",
-        "Port": 465,
-        //"Port": 587,
-        "Username": "usmaneijaz@gmail.com",
-        "Password": "rykk hmrh rbtk arbw"
+        "Port": 467,
+        "Username": "your_email@gmail.com",
+        "Password": "app_password"
     }
 }
