--- a/NotificationSystem/EmailSender.csproj
+++ b/NotificationSystem/EmailSender.csproj
@@ -28,4 +28,10 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Templates\email.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
