--- a/NotificationSystem/appsettings.json
+++ b/NotificationSystem/appsettings.json
@@ -1,10 +1,10 @@
 {
     "EmailSettings": {
         "DisplayName": "System Mail",
-        "From": "your_email@gmail.com",
+        "From": "usmaneijaz@gmail.com",
         "Host": "smtp.gmail.com",
-        "Port": 467,
-        "Username": "your_email@gmail.com",
-        "Password": "app_password"
+        "Port": 465,
+        "Username": "usmaneijaz@gmail.com",
+        "Password": "rykk hmrh rbtk arbw"
     }
 }
