Code changes and restructure

--- a/NotificationSystem/appsettings.json
+++ b/NotificationSystem/appsettings.json
@@ -1,10 +1,12 @@
 {
-    "EmailSettings": {
-        "DisplayName": "System Mail",
-        "From": "usmaneijaz@gmail.com",
-        "Host": "smtp.gmail.com",
-        "Port": 465,
-        "Username": "usmaneijaz@gmail.com",
-        "Password": "rykk hmrh rbtk arbw"
-    }
+  "EmailSettings": {
+    "DisplayName": "System Mail",
+    "From": "test@yopmail.com",
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "test",
+    "Password": "app_password",
+    "To": "test1@yopmail.com"
+
+  }
 }
